# quiz

./: .gitignore  README.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coveragerc  pyproject.toml
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: t3.md  t4.md
python-quiz/: pyproject.toml  tasks.py
python-quiz/data/: data.db  highscores.csv
python-quiz/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testidokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
python-quiz/src/: connection.py  index.py  questions.py
python-quiz/src/entities/: game.py  highscores.py  player.py
python-quiz/src/repositories/: questions.py
python-quiz/src/services/: connection_services.py  game_services.py  highscore_services.py  question_services.py  ui_services.py
python-quiz/src/tests/: game_services_test.py  game_test.py  highscore_services_test.py  highscores_test.py  player_test.py  question_services_test.py  questions_test.py  test_highscore_services.py
python-quiz/src/ui/: game_ui.py  highscore_ui.py  main.py  main_ui.py
