[tool.poetry]
name = "python-quiz"
version = "0.1.0"
description = "Small quiz program"
authors = ["Juha Leikas <juha.leikas@gmail.com>"]
readme = "README.md"
packages = [{include = "python_quiz"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
