[tool.poetry]
name = "python-quiz"
version = "0.1.0"
description = "Small quiz program"
authors = ["Juha Leikas <juha.leikas@gmail.com>"]
readme = "README.md"
packages = [{include = "python_quiz"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pylint = "^2.15.7"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
